--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 <body>
 	<div class="contenedor" id="contenedor"></div>
 	
+	<div class="paginacion">
+		<button id="btnAnterior">
+			Aterior
+		</button>
+		<button id="btnSiguiente">
+			Siguiente
+		</button>
+	</div>
+
 	<script src="app.js"></script>
 </body>
 </html>
